<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.fragment.FormOfDocumentFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_baseline_close" />

        <Button
            android:id="@+id/buttonSave"
            style="@style/ButtonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp"
            android:enabled="false"
            android:text="@string/delete" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_form_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_name_hint"
            android:inputType="textCapWords"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_form_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_form_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_surname_hint"
            android:inputType="textCapWords"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_form_stay_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_form_stay_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_stay_address_hint"
            android:inputType="textCapWords"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_form_date_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_form_date_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_date_in_hint"
            android:inputType="date"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>